frame/support/test/tests/construct_runtime_ui/missing_construct_runtime_args.stderr
error[E0433]: failed to resolve: could not find `construct_runtime_args` in `system`
  --> $DIR/missing_construct_runtime_args.rs:12:3
   |
12 |         System: system,
   |         ^^^^^^ could not find `construct_runtime_args` in `system`
